fixed main nav spacing and added commas to number formatting numeral lib

--- a/app/assets/stylesheets/main/nav.css
+++ b/app/assets/stylesheets/main/nav.css
@@ -6,14 +6,9 @@
     padding-bottom: 10px;;
 }
 
-.nav-left {
-    display: flex;
-    margin-left: 5vw;
-}
-
 .nav-right {
     display: flex;
-    margin-right: 5vw;
+    margin-right: 20px;
     cursor: pointer;
 }
 
@@ -29,6 +24,7 @@
 .main-nav-logo {
     height: 55px;
     width: 55px;
+    margin: 0 0 0 20px;
 }
 
 .search-field {
